# marketing-models

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: pre-commit-action.yaml
attribution/: README.md  TODO.md  pyproject.toml
attribution/src/bigquery/: ga4_attribution_chains_preparation.sql  ga4_events_preparation.sql
attribution/src/config/: config.yaml
attribution/src/data/: source_categories.csv
attribution/src/python/: attribution.py  functions.py
marketing_mix_model/: README.md  TODO.md  pyproject.toml
marketing_mix_model/src/: data_preprocessing_report.py  functions.py
marketing_mix_model/src/config/: config_it.yaml
marketing_mix_model/src/data/: 20240317_MMM_IT_input_channels_recap.xlsx  MMM_IT_input_data.csv
